--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
 			<div class="wrapper">
 				<form action="#" method="POST" class="form">
 					<div class="question">
-						<h3>Full Name</h3>
-						<input type="text" class="form__input" name="name" required />
-					</div>
-					<div class="question">
 						<h3>Gender</h3>
 						<div class="radio_button">
 							<input name="radio" type="radio" checked />
@@ -34,6 +30,6 @@
 				</form>
 			</div>
 		</main>
-		<script src="js/main.js"></script>
+		<script src="main.js"></script>
 	</body>
 </html>
