📦 NEW: Initialize Code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+	<!--A very basic Form Skeleton to test the functionality, once working, it will be updated to a proper level.-->
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 		<meta charset="utf-8" />
